Add filter and translation

--- a/group_by_tags/report/sale_report_view.xml
+++ b/group_by_tags/report/sale_report_view.xml
@@ -15,6 +15,9 @@
                 <field name="tag_ids_concatenated" invisible='1'/>
                 <filter string="Tags" name="groupby_tag_ids_concatenated"
                         context="{'group_by':'tag_ids_concatenated'}"/>
+                <field name="partner_tags_ids_concatenated" invisible="1"/>
+                <filter string="Partner Tags" name="groupby_partner_tags_ids_concatenated"
+                        context="{'group_by':'partner_tags_ids_concatenated'}"/>
             </xpath>
         </field>
     </record>
