--- a/group_by_tags/report/sale_report_view.xml
+++ b/group_by_tags/report/sale_report_view.xml
@@ -21,4 +21,16 @@
             </xpath>
         </field>
     </record>
+
+    <record id="sale_report_view_tree_group_by_tags" model="ir.ui.view">
+        <field name="name">view.order.report.view.tree.group.by.tags</field>
+        <field name="model">sale.report</field>
+        <field name="inherit_id" ref="sale.sale_report_view_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='state']" position="after">
+                <field name="tag_ids_concatenated" optional="show"/>
+                <field name="partner_tags_ids_concatenated" optional="show"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
